# Licence_Plates_Detector_CPP

./: CMakeLists.txt  Main.cpp  main.cpp  readme.md
modules/config/: config_model.h
modules/genpriors/: genpriors.cpp  genpriors.h
modules/inference/: inference.cpp  inference.h
modules/postprocessing/: postprocessing.cpp  postprocessing.h
modules/visualization/: visualization.cpp  visualization.h
